// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValidationAccount Failed to verify account Renders the component 1`] = `
<v-layout-stub tag="div" align-center="" justify-center="">
  <v-flex-stub tag="div" xs12="" sm8="" md4="" lg3="" xl2="">
    <v-card-stub loaderheight="4" tag="div" data-test="accountCreated-card" class="pa-6">
      <v-container-stub tag="div">
        <v-layout-stub tag="div" align-center="" justify-center="" column="">
          <v-flex-stub tag="div" class="text-center primary--text">
            <v-img-stub maxwidth="220" options="[object Object]" position="center center" src="@/assets/logo-inverted.png" transition="fade-transition"></v-img-stub>
          </v-flex-stub>
        </v-layout-stub>
      </v-container-stub>
      <v-card-title-stub tag="div" class="justify-center">
        Verification Account
      </v-card-title-stub>
      <!---->
      <!---->
      <v-card-text-stub tag="div" data-test="failed-cardText" class="d-flex align-center justify-center">
        There was a problem activating your account. Go to the login page, login to receive
        another email with the activation link.
      </v-card-text-stub>
      <v-card-subtitle-stub tag="div" data-test="isCloud-card" class="d-flex align-center justify-center pa-4 mx-auto pt-2">
        Back to
        <router-link-stub to="[object Object]" tag="a" ariacurrentvalue="page" event="click" class="ml-1">
          Login
        </router-link-stub>
      </v-card-subtitle-stub>
    </v-card-stub>
  </v-flex-stub>
</v-layout-stub>
`;

exports[`ValidationAccount Success to verify account Renders the component 1`] = `
<v-layout-stub tag="div" align-center="" justify-center="">
  <v-flex-stub tag="div" xs12="" sm8="" md4="" lg3="" xl2="">
    <v-card-stub loaderheight="4" tag="div" data-test="accountCreated-card" class="pa-6">
      <v-container-stub tag="div">
        <v-layout-stub tag="div" align-center="" justify-center="" column="">
          <v-flex-stub tag="div" class="text-center primary--text">
            <v-img-stub maxwidth="220" options="[object Object]" position="center center" src="@/assets/logo-inverted.png" transition="fade-transition"></v-img-stub>
          </v-flex-stub>
        </v-layout-stub>
      </v-container-stub>
      <v-card-title-stub tag="div" class="justify-center">
        Verification Account
      </v-card-title-stub>
      <!---->
      <v-card-text-stub tag="div" data-test="success-cardText" class="d-flex align-center justify-center">
        Congrats and welcome to ShellHub.
      </v-card-text-stub>
      <!---->
      <v-card-subtitle-stub tag="div" data-test="isCloud-card" class="d-flex align-center justify-center pa-4 mx-auto pt-2">
        Back to
        <router-link-stub to="[object Object]" tag="a" ariacurrentvalue="page" event="click" class="ml-1">
          Login
        </router-link-stub>
      </v-card-subtitle-stub>
    </v-card-stub>
  </v-flex-stub>
</v-layout-stub>
`;
